web: css: header fixes, sometimes too much margin, sometimes too little
Mostly due to "do I have nav next or not" issues.

Also unified the mobile width across CLI and web, had been set differently
from before I had started using ourbigbook.common.scss.

--- a/ourbigbook.common.scss
+++ b/ourbigbook.common.scss
@@ -28,6 +28,7 @@ $toplevel-horizontal-padding-right: 15px;
 $font-family: Arial, Helvetica, sans-serif;
 $header-font-size: 24px;
 $h1-font-size: $header-font-size * 1.5;
+$max-mobile-width: 635px;
 
 @mixin body {
   background-color: $background-color;
