--- a/ourbigbook.scss
+++ b/ourbigbook.scss
@@ -12,7 +12,6 @@
 
 $caption-margin-bottom: 5px;
 $p-margin-vert: 14px;
-$max-mobile-width: 450px;
 $toplevel-horizontal-padding-mobile: 5px;
 
 @mixin hidden {
@@ -170,6 +169,9 @@ div.h {
     }
     h2, h3, h4, h5, h6 {
       font-size: $header-font-size;
+    }
+    &:not(:last-child) {
+      margin-bottom: 10px;
     }
   }
   .hover-meta {
